{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 457,
  "lineage": "6b291144-444e-d40f-d577-ffe775af44b9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-15T13:35:26.907-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/brauss2024/regions/us-central1/routers/globo-web-app-dev-router-gw-group0",
            "name": "globo-web-app-dev-router-gw-group0",
            "network": "https://www.googleapis.com/compute/v1/projects/brauss2024/global/networks/globo-web-app-dev-vpc-network",
            "project": "brauss2024",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/brauss2024/regions/us-central1/routers/globo-web-app-dev-router-gw-group0"
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-15T13:35:27.016-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/brauss2024/regions/us-west1/routers/globo-web-app-dev-router-gw-group1",
            "name": "globo-web-app-dev-router-gw-group1",
            "network": "https://www.googleapis.com/compute/v1/projects/brauss2024/global/networks/globo-web-app-dev-vpc-network",
            "project": "brauss2024",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/brauss2024/regions/us-west1/routers/globo-web-app-dev-router-gw-group1"
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cloud-nat-groups[0]",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "brauss2024/us-central1/globo-web-app-dev-router-gw-group0/globo-web-app-dev-cloud-nat-group0",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 64,
            "name": "globo-web-app-dev-cloud-nat-group0",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "brauss2024",
            "region": "us-central1",
            "router": "globo-web-app-dev-router-gw-group0",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_router.groups",
            "module.cloud-nat-groups.google_compute_router.router",
            "module.cloud-nat-groups.random_string.name_suffix",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.cloud-nat-groups[1]",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "brauss2024/us-west1/globo-web-app-dev-router-gw-group1/globo-web-app-dev-cloud-nat-group1",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 64,
            "name": "globo-web-app-dev-cloud-nat-group1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "brauss2024",
            "region": "us-west1",
            "router": "globo-web-app-dev-router-gw-group1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_router.groups",
            "module.cloud-nat-groups.google_compute_router.router",
            "module.cloud-nat-groups.random_string.name_suffix",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/brauss2024/regions/us-central1/instanceGroups/globo-web-app-dev-mig-0-us-central1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/brauss2024/regions/us-west1/instanceGroups/globo-web-app-dev-mig-1-us-west1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-01-15T14:10:22.653-08:00",
            "enable_cdn": false,
            "fingerprint": "pNzZUIIosO0=",
            "generated_id": 7224303426447348641,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/brauss2024/global/healthChecks/globo-web-app-dev-multi-mig-lb-http-hc-default"
            ],
            "id": "projects/brauss2024/global/backendServices/globo-web-app-dev-multi-mig-lb-http-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "globo-web-app-dev-multi-mig-lb-http-backend-default",
            "port_name": "http",
            "project": "brauss2024",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/brauss2024/global/backendServices/globo-web-app-dev-multi-mig-lb-http-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_router.groups",
            "google_storage_bucket_object.website_content",
            "module.bucket.google_storage_bucket.gcs_bucket",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.mig_templates.google_compute_instance_template.tpl",
            "module.migs.data.google_compute_zones.available",
            "module.migs.google_compute_health_check.http",
            "module.migs.google_compute_health_check.https",
            "module.migs.google_compute_health_check.tcp",
            "module.migs.google_compute_region_autoscaler.autoscaler",
            "module.migs.google_compute_region_instance_group_manager.mig",
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network",
            "random_integer.bucket"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-15T14:10:11.295-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/brauss2024/global/firewalls/globo-web-app-dev-multi-mig-lb-http-hc-0",
            "log_config": [],
            "name": "globo-web-app-dev-multi-mig-lb-http-hc-0",
            "network": "https://www.googleapis.com/compute/v1/projects/brauss2024/global/networks/globo-web-app-dev-vpc-network",
            "priority": 1000,
            "project": "brauss2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/brauss2024/global/firewalls/globo-web-app-dev-multi-mig-lb-http-hc-0",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "globo-web-app-dev-router-gw-group0",
              "globo-web-app-dev-router-gw-group1",
              "globo-web-app-dev-subnet-us-central1",
              "globo-web-app-dev-subnet-us-west1"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_router.groups",
            "google_storage_bucket_object.website_content",
            "module.bucket.google_storage_bucket.gcs_bucket",
            "module.cloud-nat-groups.google_compute_router.router",
            "module.cloud-nat-groups.google_compute_router_nat.main",
            "module.cloud-nat-groups.random_string.name_suffix",
            "module.mig_templates.google_compute_instance_template.tpl",
            "module.migs.data.google_compute_zones.available",
            "module.migs.google_compute_health_check.http",
            "module.migs.google_compute_health_check.https",
            "module.migs.google_compute_health_check.tcp",
            "module.migs.google_compute_region_autoscaler.autoscaler",
            "module.migs.google_compute_region_instance_group_manager.mig",
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network",
            "random_integer.bucket"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "35.227.252.22",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-01-15T13:35:15.657-08:00",
            "id": "projects/brauss2024/global/addresses/globo-web-app-dev-multi-mig-lb-http-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "globo-web-app-dev-multi-mig-lb-http-address",
            "prefix_length": 0,
            "project": "brauss2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/brauss2024/global/addresses/globo-web-app-dev-multi-mig-lb-http-address"
          }
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/brauss2024/global/forwardingRules/globo-web-app-dev-multi-mig-lb-http",
            "ip_address": "35.227.252.22",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "globo-web-app-dev-multi-mig-lb-http",
            "port_range": "80-80",
            "project": "brauss2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/brauss2024/global/forwardingRules/globo-web-app-dev-multi-mig-lb-http",
            "target": "https://www.googleapis.com/compute/beta/projects/brauss2024/global/targetHttpProxies/globo-web-app-dev-multi-mig-lb-http-http-proxy"
          },
          "dependencies": [
            "google_compute_router.groups",
            "google_storage_bucket_object.website_content",
            "module.bucket.google_storage_bucket.gcs_bucket",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_global_address.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.gce-lb-http.google_compute_target_http_proxy.default",
            "module.gce-lb-http.google_compute_url_map.default",
            "module.gce-lb-http.google_compute_url_map.https_redirect",
            "module.mig_templates.google_compute_instance_template.tpl",
            "module.migs.data.google_compute_zones.available",
            "module.migs.google_compute_health_check.http",
            "module.migs.google_compute_health_check.https",
            "module.migs.google_compute_health_check.tcp",
            "module.migs.google_compute_region_autoscaler.autoscaler",
            "module.migs.google_compute_region_instance_group_manager.mig",
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network",
            "random_integer.bucket"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-15T14:11:05.792-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/brauss2024/global/targetHttpProxies/globo-web-app-dev-multi-mig-lb-http-http-proxy",
            "name": "globo-web-app-dev-multi-mig-lb-http-http-proxy",
            "project": "brauss2024",
            "proxy_bind": false,
            "proxy_id": 5144310971846103958,
            "self_link": "https://www.googleapis.com/compute/v1/projects/brauss2024/global/targetHttpProxies/globo-web-app-dev-multi-mig-lb-http-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/brauss2024/global/urlMaps/globo-web-app-dev-multi-mig-lb-http-url-map"
          },
          "dependencies": [
            "google_compute_router.groups",
            "google_storage_bucket_object.website_content",
            "module.bucket.google_storage_bucket.gcs_bucket",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.gce-lb-http.google_compute_url_map.default",
            "module.gce-lb-http.google_compute_url_map.https_redirect",
            "module.mig_templates.google_compute_instance_template.tpl",
            "module.migs.data.google_compute_zones.available",
            "module.migs.google_compute_health_check.http",
            "module.migs.google_compute_health_check.https",
            "module.migs.google_compute_health_check.tcp",
            "module.migs.google_compute_region_autoscaler.autoscaler",
            "module.migs.google_compute_region_instance_group_manager.mig",
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network",
            "random_integer.bucket"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-15T14:10:54.238-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/brauss2024/global/backendServices/globo-web-app-dev-multi-mig-lb-http-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Z0XCoJSlL7c=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/brauss2024/global/urlMaps/globo-web-app-dev-multi-mig-lb-http-url-map",
            "map_id": 8562205019259540353,
            "name": "globo-web-app-dev-multi-mig-lb-http-url-map",
            "path_matcher": [],
            "project": "brauss2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/brauss2024/global/urlMaps/globo-web-app-dev-multi-mig-lb-http-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_router.groups",
            "google_storage_bucket_object.website_content",
            "module.bucket.google_storage_bucket.gcs_bucket",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.mig_templates.google_compute_instance_template.tpl",
            "module.migs.data.google_compute_zones.available",
            "module.migs.google_compute_health_check.http",
            "module.migs.google_compute_health_check.https",
            "module.migs.google_compute_health_check.tcp",
            "module.migs.google_compute_region_autoscaler.autoscaler",
            "module.migs.google_compute_region_instance_group_manager.mig",
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network",
            "random_integer.bucket"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules_ingress_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "globo-web-app-dev-firewall",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "8080",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-15T13:35:26.858-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/brauss2024/global/firewalls/globo-web-app-dev-firewall",
            "log_config": [],
            "name": "globo-web-app-dev-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/brauss2024/global/networks/globo-web-app-dev-vpc-network",
            "priority": 999,
            "project": "brauss2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/brauss2024/global/firewalls/globo-web-app-dev-firewall",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/globo-web-app-dev-subnet-us-central1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-15T13:35:27.109-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/brauss2024/regions/us-central1/subnetworks/globo-web-app-dev-subnet-us-central1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "globo-web-app-dev-subnet-us-central1",
            "network": "https://www.googleapis.com/compute/v1/projects/brauss2024/global/networks/globo-web-app-dev-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "brauss2024",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/brauss2024/regions/us-central1/subnetworks/globo-web-app-dev-subnet-us-central1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-west1/globo-web-app-dev-subnet-us-west1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-15T13:35:27.601-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/brauss2024/regions/us-west1/subnetworks/globo-web-app-dev-subnet-us-west1",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "globo-web-app-dev-subnet-us-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/brauss2024/global/networks/globo-web-app-dev-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "brauss2024",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/brauss2024/regions/us-west1/subnetworks/globo-web-app-dev-subnet-us-west1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/brauss2024/global/networks/globo-web-app-dev-vpc-network",
            "mtu": 0,
            "name": "globo-web-app-dev-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "brauss2024",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/brauss2024/global/networks/globo-web-app-dev-vpc-network"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}